# knot-virtualthing

./: .gitignore  COPYING  Dockerfile  Makefile.am  README.md  acinclude.m4  bootstrap  bootstrap-configure  configure.ac
confs/: cloud.conf  device.conf
hooks/: pre-commit.hook
hooks/scripts/: checkpatch.pl
src/: cloud.c  cloud.h  conf-device.h  conf-driver.h  conf-parameters.h  credentials.conf  device-pvt.h  device.c  device.conf  device.h  driver.c  driver.h  event.c  event.h  iface-ethernet-ip.c  iface-ethernet-ip.h  iface-modbus-rtu.c  iface-modbus-tcp.c  iface-modbus.c  iface-modbus.h  iface-opc-ua.c  iface-opc-ua.h  knot-config.c  knot-config.h  main.c  modbus-interface.c  modbus-interface.h  modbus-rtu.c  modbus-tcp.c  modbus.h  mq.c  mq.h  parser.c  parser.h  poll.c  poll.h  properties.c  properties.h  rabbitmq.conf  rtu.c  (+8 more)
tests/: device-tests.c  st-machine-test.c
tests/mocks/: fake-device.c  fake-device.h
